mux-compiler/tests/snapshots/lexer_integration__file_lexer__test_module_class_globals.snap
---
source: mux-compiler/tests/lexer_integration.rs
expression: tokens
---
[
    Token {
        token_type: LineComment(
            "A class defined in a module, whose method reads a module-level constant.",
        ),
        span: Span {
            row_start: 1,
            row_end: Some(
                1,
            ),
            col_start: 1,
            col_end: Some(
                76,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 1,
            row_end: None,
            col_start: 76,
            col_end: None,
        },
    },
    Token {
        token_type: LineComment(
            "The method must be generated with its own module's globals visible, not the",
        ),
        span: Span {
            row_start: 2,
            row_end: Some(
                2,
            ),
            col_start: 1,
            col_end: Some(
                79,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 2,
            row_end: None,
            col_start: 79,
            col_end: None,
        },
    },
    Token {
        token_type: LineComment(
            "importing module's, or the constant is unresolvable.",
        ),
        span: Span {
            row_start: 3,
            row_end: Some(
                3,
            ),
            col_start: 1,
            col_end: Some(
                56,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 3,
            row_end: None,
            col_start: 56,
            col_end: None,
        },
    },
    Token {
        token_type: Import,
        span: Span {
            row_start: 4,
            row_end: Some(
                4,
            ),
            col_start: 1,
            col_end: Some(
                7,
            ),
        },
    },
    Token {
        token_type: Id(
            "modglobal_d",
        ),
        span: Span {
            row_start: 4,
            row_end: Some(
                4,
            ),
            col_start: 8,
            col_end: Some(
                19,
            ),
        },
    },
    Token {
        token_type: Dot,
        span: Span {
            row_start: 4,
            row_end: None,
            col_start: 19,
            col_end: None,
        },
    },
    Token {
        token_type: Star,
        span: Span {
            row_start: 4,
            row_end: Some(
                4,
            ),
            col_start: 20,
            col_end: Some(
                21,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 4,
            row_end: None,
            col_start: 21,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 5,
            row_end: None,
            col_start: 1,
            col_end: None,
        },
    },
    Token {
        token_type: Func,
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 1,
            col_end: Some(
                5,
            ),
        },
    },
    Token {
        token_type: Id(
            "main",
        ),
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 6,
            col_end: Some(
                10,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 6,
            row_end: None,
            col_start: 10,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 6,
            row_end: None,
            col_start: 11,
            col_end: None,
        },
    },
    Token {
        token_type: Returns,
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 13,
            col_end: Some(
                20,
            ),
        },
    },
    Token {
        token_type: Id(
            "void",
        ),
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 21,
            col_end: Some(
                25,
            ),
        },
    },
    Token {
        token_type: OpenBrace,
        span: Span {
            row_start: 6,
            row_end: None,
            col_start: 26,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 6,
            row_end: None,
            col_start: 27,
            col_end: None,
        },
    },
    Token {
        token_type: Auto,
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 5,
            col_end: Some(
                9,
            ),
        },
    },
    Token {
        token_type: Id(
            "s",
        ),
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 10,
            col_end: Some(
                11,
            ),
        },
    },
    Token {
        token_type: Eq,
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 12,
            col_end: Some(
                13,
            ),
        },
    },
    Token {
        token_type: Id(
            "Scaler",
        ),
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 14,
            col_end: Some(
                20,
            ),
        },
    },
    Token {
        token_type: Dot,
        span: Span {
            row_start: 7,
            row_end: None,
            col_start: 20,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "of",
        ),
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 21,
            col_end: Some(
                23,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 7,
            row_end: None,
            col_start: 23,
            col_end: None,
        },
    },
    Token {
        token_type: Int(
            3,
        ),
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 24,
            col_end: Some(
                25,
            ),
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 7,
            row_end: None,
            col_start: 25,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 7,
            row_end: None,
            col_start: 26,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span {
            row_start: 8,
            row_end: Some(
                8,
            ),
            col_start: 5,
            col_end: Some(
                10,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 10,
            col_end: None,
        },
    },
    Token {
        token_type: Str(
            "scaled (want 333): ",
        ),
        span: Span {
            row_start: 8,
            row_end: Some(
                8,
            ),
            col_start: 11,
            col_end: Some(
                32,
            ),
        },
    },
    Token {
        token_type: Plus,
        span: Span {
            row_start: 8,
            row_end: Some(
                8,
            ),
            col_start: 33,
            col_end: Some(
                34,
            ),
        },
    },
    Token {
        token_type: Id(
            "s",
        ),
        span: Span {
            row_start: 8,
            row_end: Some(
                8,
            ),
            col_start: 35,
            col_end: Some(
                36,
            ),
        },
    },
    Token {
        token_type: Dot,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 36,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "scaled",
        ),
        span: Span {
            row_start: 8,
            row_end: Some(
                8,
            ),
            col_start: 37,
            col_end: Some(
                43,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 43,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 44,
            col_end: None,
        },
    },
    Token {
        token_type: Dot,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 45,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span {
            row_start: 8,
            row_end: Some(
                8,
            ),
            col_start: 46,
            col_end: Some(
                55,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 55,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 56,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 57,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 58,
            col_end: None,
        },
    },
    Token {
        token_type: Return,
        span: Span {
            row_start: 9,
            row_end: Some(
                9,
            ),
            col_start: 5,
            col_end: Some(
                11,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 9,
            row_end: None,
            col_start: 11,
            col_end: None,
        },
    },
    Token {
        token_type: CloseBrace,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 1,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 2,
            col_end: None,
        },
    },
]
